# netsci

./: .gitignore  AGENTS.md  README.md  check_versions.py  pyproject.toml
docs/: examples-and-exercises-standards.md
exercises/dbaric/exercise_04/: exercise_04.ipynb
exercises/dbaric/exercise_05/: community_viz.html  exercise_05.ipynb
exercises/dbaric/exercise_06/: exercise_06.ipynb
exercises/dbaric/exercise_07/: exercise_07.ipynb
exercises/excerise-02/dbaric/: ego_network.html  notebook.ipynb
exercises/google-web-graph-rkrstic/: exercise_02.ipynb  exercise_02_marimo.py  exercise_03.ipynb  exercise_04.ipynb
exercises/lkrvavica/: exercise-04.py
exercises/lkrvavica/exercise_06/: exercise_06.py
exercises/lkrvavica/exercise_07/: exercise_07.py
exercises/mcovic/exercise_04/: exercise_04.ipynb
exercises/mcovic/exercise_05/: exercise_05.ipynb
exercises/mkatavic/exercise_05/: exercise_05.py
exercises/mkatavic/exercise_06/: exercise_06.py
exercises/mkatavic/exercise_07/: exercise_07.py
exercises/mkatavic/exercise_08/: exercise_08.py
exercises/nvidovic/: requirements.txt
exercises/pstipandz/: vj01.ipynb  vj02.ipynb  vj03.ipynb
exercises/sjadrijev/: sjadrijev_spammers.ipynb
lectures/01/: lecture.md
lectures/02/: lecture.md
lectures/03/: lecture.md
lectures/04/: lecture.md
lectures/05/: lecture.md
lectures/06/: lecture.md
lectures/07/: lecture.md
lectures/08/: generate_images.py  lecture.md
lectures/09/: lecture.md
lectures/10/: lecture.md
lectures/11/: lecture.md
tutorials/: README.md
(+15 files in other folders)
