[project]
name = "netsci"
version = "0.1.0"
description = "Course materials for Network Analysis at PMF-UNIST."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "networkx>=3.4.2",
    "python-louvain>=0.16",
    "powerlaw>=1.5",
    "plotly>=6.0.0",
    "bokeh>=3.6.3",
    "graphviz>=0.20.3",
    "spacy>=3.8.4",
    "PyPDF2>=3.0.1",
    "anthropic>=0.49.0",
    "jupyter>=1.1.1",
    "notebook>=7.3.2",
    "jupyterlab>=4.3.5",
    "marimo>=0.21.1",
]

[tool.uv]
package = false
